<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
                <ListPreference
                    android:title="@string/language"
                    android:summary="@string/language_description"
                    android:key="dil"
                    android:icon="@drawable/translation"
                    android:entries="@array/languagelist"
                    android:entryValues="@array/languagevalue"
                    android:negativeButtonText="@string/cancel"
                    />
                <ListPreference
                    android:title="@string/theme"
                    android:summary="@string/theme_description"
                    android:key="theme"
                    android:icon="@drawable/color_palette"
                    android:entries="@array/themelist"
                    android:entryValues="@array/themevalue"
                    android:negativeButtonText="@string/cancel"
                    />
                <Preference
                    android:key="sifirla"
                    android:icon="@drawable/database"
                    android:title="@string/reset_database"
                    android:summary="@string/reset_database_description"
                    />
</PreferenceScreen>