<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:title="@string/add_fav"
        android:icon="@drawable/ic_action_favourite"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="300"
        android:title="@string/copy"
        android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
        app:showAsAction="always"
        />

</menu>