<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_marginTop="?actionBarSize"
        >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="250px"
            android:layout_height="250px"
            android:src="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:layout_marginTop="100px"
            />

        <TextView
            android:id="@+id/hello_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="18pt"
            android:textAlignment="center"
            android:layout_below="@+id/app_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50px"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/program_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_slogan"
            android:textSize="8pt"
            android:textAlignment="center"
            android:layout_below="@+id/hello_program"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/discover"
            android:layout_below="@+id/program_slogan"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/discover_dict"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/bg_button_rounded"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skip_the_show"
            android:layout_below="@+id/discover"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:background="@null"
            android:textSize="10pt"
            android:layout_marginTop="20dp"
            android:text="@string/skip_show"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

</RelativeLayout>