<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorAccent">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorAccent">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="250px"
                android:layout_height="250px"
                android:src="@drawable/icon"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:layout_marginTop="100px"
                />

            <TextView
                android:id="@+id/hello_program"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="14pt"
                android:textAlignment="center"
                android:layout_below="@+id/app_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50px"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/program_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="10pt"
                android:textAlignment="center"
                android:layout_below="@+id/hello_program"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20px"
                android:textColor="@android:color/white"
                />


            <ScrollView
                android:id="@+id/scroll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/program_slogan"
                android:scrollbars="vertical"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/skip_the_show"
                    android:text="@string/about_text"
                    android:textSize="10pt"
                    android:textAlignment="center"
                    android:background="@null"
                    android:textColor="#fff"
                    />

            </ScrollView>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>