<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_save_term"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="?colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_form_rounded">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColorHint="?colorAccent"
            >

            <EditText
                android:id="@+id/kelime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_term"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:inputType="text"
                android:textColor="?colorAccent"
                android:textColorHint="?colorAccent"
                android:backgroundTint="?colorPrimary"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:textColorHint="?colorAccent"
            >

            <EditText
                android:id="@+id/aciklama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_desc"
                android:inputType="text"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:textColor="?colorAccent"
                android:textColorHint="?colorAccent"
                android:backgroundTint="?colorPrimary"
                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/butonkaydet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:text="@string/save_term_button"
            android:textColor="#fff"
            android:layout_margin="10dp"
        />





    </LinearLayout>


</LinearLayout>